--- a/package.json
+++ b/package.json
@@ -3,18 +3,49 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^3.4.0",
+    "@headlessui/react": "^1.2.0",
+    "@heroicons/react": "^1.0.1",
+    "@hookform/resolvers": "^2.5.2",
+    "@tailwindcss/typography": "^0.4.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^9",
+    "axios": "^1.3.4",
+    "clsx": "^1.1.1",
+    "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
+    "i": "^0.3.7",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
+    "nanoid": "^3.1.23",
+    "npm": "^9.6.3",
+    "postcss": "^7",
     "react": "^18.2.0",
+    "react-app-rewire-alias": "^1.1.7",
+    "react-app-rewired": "^2.2.1",
+    "react-cookie-consent": "^8.0.1",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-error-boundary": "^3.1.3",
+    "react-helmet-async": "^1.1.2",
+    "react-hook-form": "^7.7.1",
+    "react-loading-skeleton": "^3.2.0",
+    "react-paginate": "^8.1.5",
+    "react-query": "^3.34.15",
+    "history": "^5.0.0",
+    "react-query-auth": "^1.1.0",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "web-vitals": "^2.1.4",
+    "zod": "^3.21.4",
+    "zustand": "^3.5.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,5 +65,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.3.0"
   }
 }
