--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fingerprintjs/fingerprintjs": "^3.4.0",
+    "@fingerprintjs/fingerprintjs": "^3.4.1",
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@hookform/resolvers": "^2.5.2",
@@ -11,16 +11,21 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trendyol-js/react-carousel": "^3.0.2",
     "autoprefixer": "^9",
     "axios": "^1.3.4",
     "clsx": "^1.1.1",
+    "convert-csv-to-json": "^2.0.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "env-cmd": "^10.1.0",
+    "history": "^5.0.0",
     "i": "^0.3.7",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "nanoid": "^3.1.23",
     "npm": "^9.6.3",
+    "papaparse": "^5.4.1",
     "postcss": "^7",
     "react": "^18.2.0",
     "react-app-rewire-alias": "^1.1.7",
@@ -32,8 +37,8 @@
     "react-hook-form": "^7.7.1",
     "react-loading-skeleton": "^3.2.0",
     "react-paginate": "^8.1.5",
+    "react-papaparse": "^4.1.0",
     "react-query": "^3.34.15",
-    "history": "^5.0.0",
     "react-query-auth": "^1.1.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
@@ -43,8 +48,10 @@
     "zustand": "^3.5.2"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": " react-app-rewired  start NODE_ENV=development",
+    "start-prod": " react-app-rewired  start NODE_ENV=development",
+    "build-dev": " react-app-rewired  build NODE_ENV=development",
+    "build-prod": "react-app-rewired build NODE_ENV=production ",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
