showing last 3 product seen and showing default image on image loading failed

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://project-consulting-backend.gentlebush-e24163a8.germanywestcentral.azurecontainerapps.io
+REACT_APP_API_URL=http://project-consulting-backend.bzg8aagdatghfng6.germanywestcentral.azurecontainer.io:3200
+REACT_APP_API_FUNCTION_URL=https://hsamvptest.azurewebsites.net
