--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@trendyol-js/react-carousel": "^3.0.2",
     "autoprefixer": "^9",
     "axios": "^1.3.4",
+    "axios-retry": "^3.4.0",
     "clsx": "^1.1.1",
     "convert-csv-to-json": "^2.0.0",
     "dayjs": "^1.11.7",
@@ -49,9 +50,9 @@
   },
   "scripts": {
     "start": " react-app-rewired  start NODE_ENV=development",
-    "start-prod": " react-app-rewired  start NODE_ENV=development",
+    "start-prod": "react-app-rewired  start NODE_ENV=production",
     "build-dev": " react-app-rewired  build NODE_ENV=development",
-    "build-prod": "react-app-rewired build NODE_ENV=production ",
+    "build-prod": "react-app-rewired build NODE_ENV=production",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
