--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "react-papaparse": "^4.1.0",
     "react-query": "^3.34.15",
     "react-query-auth": "^1.1.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^2.1.4",
     "zod": "^3.21.4",
