Adding the options for other event type and fixing some views problem and nginx

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 REACT_APP_API_URL=http://project-consulting-backend.bzg8aagdatghfng6.germanywestcentral.azurecontainer.io:3200
-REACT_APP_API_FUNCTION_URL=https://hsamvptest.azurewebsites.net
+REACT_APP_API_FUNCTION_URL=https://pythonhsa.azurewebsites.net
