--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,8 @@
-events {}
+
 http {
- server {
-  listen 80;
-  
-   location / {
-    try_files $uri /index.html;
-   }
- }
+  include /etc/nginx/conf.d/*.conf;
+}
+
+events {
+  # Event configurations
 }
