--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@hookform/resolvers": "^2.5.2",
+    "@nextui-org/react": "^1.0.0-beta.13",
     "@tailwindcss/typography": "^0.4.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -46,6 +47,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.3",
     "react-slick": "^0.29.0",
+    "swiper": "^9.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^2.1.4",
     "zod": "^3.21.4",
